Fix z-index

--- a/index.styl
+++ b/index.styl
@@ -284,6 +284,7 @@ section
   font 18px/20px default-font
   text-align center
   cursor pointer
+  z-index 1
 
   &.prev
     left 50px
